feat: add new components and enhance styles for improved UI
- Introduced components.json for configuration of UI components and styles.
- Added new utility functions in utils.ts for class name management.
- Enhanced layout and styles in various components including Header, Accordion, and Timer.
- Integrated new animations using BlurFade and NumberTicker components for better user experience.
- Updated styles.css to include new Tailwind CSS plugins and custom themes.
- Added a new hero-mask background image for visual enhancement.
- Updated tsconfig.json to support module path aliases for cleaner imports.

--- a/src/components/CardSpeaker.astro
+++ b/src/components/CardSpeaker.astro
@@ -19,15 +19,9 @@ if (!image) {
 }
 ---
 
-<div class="card mb-8">
-  <div class="card-image bg-white p-4 lg:p-6">
-    <Image
-      src={image.default}
-      alt={data.name}
-      width={200}
-      height={200}
-      class:list={["h-full w-full object-cover grayscale"]}
-    />
+<div class="card mb-8 flex flex-col items-center">
+  <div class="card-image max-w-60 bg-white p-4 sm:max-w-full lg:p-6">
+    <Image src={image.default} alt={data.name} class:list={["h-full w-full object-cover grayscale"]} />
   </div>
   <div class="card-content mt-3 text-center">
     <div class="card-title mb-1 pt-3 text-base font-bold text-white lg:text-2xl">{data.name}</div>
