--- a/src/layout.astro
+++ b/src/layout.astro
@@ -37,7 +37,7 @@ const isPublic = true;
   </head>
   <body>
     <main class="font-sans">
-      <Header />
+      <Header client:load />
       <slot />
     </main>
     <script>
