fix: update styles for NumberTicker component and adjust text size in index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,8 +34,8 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
           </BlurFade>
           <BlurFade delay={0.6} client:load>
             <div class="my-8">
-              <span class="bg-[#32598B] px-3 py-2 text-base text-[#D9DFE9] sm:px-8 sm:text-xl">
-                <NumberTicker value={20} delay={0} className="text-base text-[#D9DFE9] sm:text-xl" client:load />+
+              <span class="bg-[#32598B] px-3 py-2 text-sm text-[#D9DFE9] sm:px-8 sm:text-base">
+                <NumberTicker value={20} delay={0} className="text-sm text-[#D9DFE9] sm:text-base" client:load />+
                 Speakers Will Talk About Artificial Intelligence
               </span>
             </div>
