fix: update text size and speaker count in index page header

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,15 +28,15 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
           class="gradient-blue card space-y-4 rounded-lg bg-gradient-to-br from-white to-[#CAE1FF] px-4 py-12 text-center shadow-lg backdrop-blur-sm">
           <BlurFade delay={0.4} client:load>
             <h1
-              class="mx-auto max-w-[700px] bg-white bg-clip-text text-center text-2xl leading-tight font-semibold tracking-tight text-transparent md:text-5xl lg:text-[40px]">
+              class="mx-auto max-w-[700px] bg-white bg-clip-text text-center text-3xl leading-tight font-semibold tracking-tight text-transparent md:text-5xl lg:text-[40px]">
               The Biggest Community-Led Developer Conference in Indonesia
             </h1>
           </BlurFade>
           <BlurFade delay={0.6} client:load>
             <div class="my-8">
               <span class="bg-[#32598B] px-3 py-2 text-sm text-[#D9DFE9] sm:px-8 sm:text-base">
-                <NumberTicker value={20} delay={0} className="text-sm text-[#D9DFE9] sm:text-base" client:load />+
-                Speakers Will Talk About Artificial Intelligence
+                <NumberTicker value={14} delay={0} className="text-sm text-[#D9DFE9] sm:text-base" client:load /> Speakers
+                Will Talk About Artificial Intelligence
               </span>
             </div>
 
