feat: add favicon.ico and update layout for improved branding

--- a/src/layout.astro
+++ b/src/layout.astro
@@ -15,10 +15,10 @@ const isPublic = true;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     {isPublic && <meta name="robots" content="index, follow" />}
     <meta name="generator" content={Astro.generator} />
+    <link rel="icon" href="/favicon.ico" />
     <meta property="og:image" content="/og.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="/og.jpg" />
