refactor: remove gradient background image and update styles for header and sections
- Deleted the unused gradient-bg.png image.
- Updated the gradient-blue utility to gradient-blue-hero with a new background image and gradient.
- Adjusted styles in index.astro to reflect the new gradient and background changes.
- Modified text color in the Header component for better visibility.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
     <div class="container">
       <BlurFade delay={0.2} client:load>
         <div
-          class="gradient-blue card space-y-4 rounded-lg bg-gradient-to-br from-white to-[#CAE1FF] px-4 py-12 text-center shadow-lg backdrop-blur-sm">
+          class="gradient-blue-hero card space-y-4 rounded-lg bg-gradient-to-br from-white to-[#CAE1FF] px-4 py-12 text-center shadow-lg backdrop-blur-sm">
           <BlurFade delay={0.4} client:load>
             <h1
               class="mx-auto max-w-[700px] bg-white bg-clip-text text-center text-3xl leading-tight font-semibold tracking-tight text-transparent md:text-5xl lg:text-[40px]">
@@ -87,7 +87,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
   </section>
 
   <!-- Speakers Section -->
-  <section id="speakers" class="from-dark to-darkblue relative z-10 bg-gradient-to-b py-12 text-white">
+  <section id="speakers" class="relative z-10 bg-[#080814] bg-gradient-to-b py-12 text-white">
     <div class="container mx-auto px-12">
       <div class="mx-auto text-center">
         <BlurFade delay={0.2} client:load>
@@ -179,7 +179,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
   </div>
 </section> -->
 
-  <div class="gradient-blue px-8 text-white">
+  <div class="bg-gradient-to-b from-[#080814] via-[#1A3182] to-[#8EB6F3] px-8 text-white">
     <section id="faq" class="container mx-auto pt-18 text-center">
       <BlurFade delay={0.2} client:load>
         <div class="section-header">
@@ -194,7 +194,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
     <section id="contact" class="container mx-auto pt-18 pb-12 text-center">
       <BlurFade delay={0.2} client:load>
         <h2 class="mb-3 text-3xl font-bold" id="contact">Updates & Questions</h2>
-        <p class="mb-8 text-xl">
+        <p class="mb-8 text-lg">
           See the event update on our social media platforms and contact us if you have any questions.
         </p>
       </BlurFade>
