refactor: update styles in Accordion, CardSpeaker, and index pages for improved layout
- Enhanced Accordion component styles by adding flex properties for better alignment.
- Adjusted CardSpeaker component margin for consistent spacing.
- Modified grid gap in index page for improved layout responsiveness.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
           </div>
         </BlurFade>
         <div class="section-content">
-          <div class="grid grid-cols-1 gap-6 text-left sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+          <div class="grid grid-cols-1 gap-3 text-left sm:grid-cols-2 sm:gap-6 md:grid-cols-3 lg:grid-cols-4">
             {
               speakersData.map((speaker, index) => (
                 <BlurFade delay={0.4 + index * 0.1} client:load>
