--- a/src/components/CardSpeaker.astro
+++ b/src/components/CardSpeaker.astro
@@ -19,7 +19,7 @@ if (!image) {
 }
 ---
 
-<div class="card mb-8 flex flex-col items-center">
+<div class="card mb-4 flex flex-col items-center sm:mb-8">
   <div class="card-image max-w-60 bg-white p-4 sm:max-w-full lg:p-6">
     <Image src={image.default} alt={data.name} class:list={["h-full w-full object-cover grayscale"]} />
   </div>
