--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,7 +97,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
           </div>
         </BlurFade>
         <div class="section-content">
-          <div class="grid grid-cols-1 gap-3 text-left sm:grid-cols-2 sm:gap-6 md:grid-cols-3 lg:grid-cols-4">
+          <div class="grid grid-cols-1 gap-6 text-left lg:grid-cols-2 lg:gap-8">
             {
               speakersData.map((speaker, index) => (
                 <BlurFade delay={0.4 + index * 0.1} client:load>
@@ -105,6 +105,11 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
                 </BlurFade>
               ))
             }
+          </div>
+          <div class="mt-8 text-center">
+            <BlurFade delay={0.8} client:load>
+              <p class="text-lg text-gray-300">More speakers to be announced soon!</p>
+            </BlurFade>
           </div>
         </div>
       </div>
