feat: hero mobile view adjustment

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
     <div class="container">
       <BlurFade delay={0.2} client:load>
         <div
-          class="gradient-blue-hero card space-y-4 rounded-lg bg-gradient-to-br from-white to-[#CAE1FF] px-4 py-12 text-center shadow-lg backdrop-blur-sm">
+          class="gradient-blue-hero card space-y-4 rounded-none bg-gradient-to-br from-white to-[#CAE1FF] px-4 py-12 text-center shadow-lg backdrop-blur-sm md:rounded-lg">
           <span class="hero-mask-overlay" aria-hidden="true"></span>
           <BlurFade delay={0.4} client:load>
             <h1
