--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
 ---
 
 <Layout>
-  <section id="hero" class="bg-dark relative flex w-full flex-col py-32 text-gray-900">
+  <section id="hero" class="bg-dark relative flex w-full flex-col pt-32 pb-[60px] text-gray-900">
     <div class="container">
       <BlurFade delay={0.2} client:load>
         <div
@@ -78,7 +78,7 @@ const socialMedias: SocialMedia[] = Object.values(socialMediasJson).map((item) =
   <section id="description" class="py-8">
     <div class="container text-center">
       <BlurFade delay={0.3} client:load>
-        <p class="text-md px-8 leading-relaxed text-white sm:text-xl">
+        <p class="text-md px-8 leading-relaxed font-light text-white/70 sm:text-xl">
           IDSW is Indonesia's biggest community-led developer conference. Organized by Perkodi and various tech
           communities, this year's mission is to explore Artificial Intelligence and its impact through in-depth
           sessions, discussions, and collaboration.
