--- a/src/components/CardSpeaker.astro
+++ b/src/components/CardSpeaker.astro
@@ -69,23 +69,21 @@ if (!image) {
   </div>
   <div class="flex flex-col justify-between px-6 py-6">
     <div>
-      <div class="space-y-3">
-        <div class="flex gap-2">
-          {
-            data.talk.topics.map((topic) => (
-              <span class="inline-flex items-center rounded-full bg-blue-500/20 px-3 py-1 text-xs font-medium tracking-wide text-blue-300 uppercase">
-                {topic}
-              </span>
-            ))
-          }
-        </div>
-        <h4 class="mb-3 text-xl font-semibold text-white">
-          {data.talk.title}
-        </h4>
-        <p class="text-base leading-relaxed font-light text-white/70">
-          {data.talk.description}
-        </p>
-      </div>
+      {
+        data.talk && (
+          <div class="space-y-3">
+            <div class="flex gap-2">
+              {data.talk.topics.map((topic) => (
+                <span class="inline-flex items-center rounded-full bg-blue-500/20 px-3 py-1 text-xs font-medium tracking-wide text-blue-300 uppercase">
+                  {topic}
+                </span>
+              ))}
+            </div>
+            <h4 class="mb-3 text-xl font-semibold text-white">{data.talk.title}</h4>
+            <p class="text-base leading-relaxed font-light text-white/70">{data.talk.description}</p>
+          </div>
+        )
+      }
     </div>
   </div>
 </div>
